--- a/tests/Layout/Overview.html
+++ b/tests/Layout/Overview.html
@@ -30,8 +30,8 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col col-xs-2 box1"></div>
-    <div class="col col-xs-10 box2"></div>
+    <div class="col-sm-2 box1"></div>
+    <div class="col-sm-10 box2"></div>
   </div>
 </div>
 <div class="container">
@@ -40,9 +40,18 @@
 </div>
 <div class="container-fluid">
   <div class="row">
-    <div class="col col-lg-2 box1"></div>
-    <div class="col col-lg-10 box2"></div>
+    <div class="col-sm-2 box1"></div>
+    <div class="col-sm-10 box2"></div>
   </div>
+</div>
+<div class="container">
+  <h2>Responsive breakpoints</h2>
+  <p>相应断点与 bootstrap 略不同，现在为</p>
+  <p>xl ： >= 1200px</p>
+  <p>lg : < 1200px; >= 992px</p>
+  <p>md : < 992px; >=768px</p>
+  <p>sm : < 768px; >= 576px</p>
+  <p>xs : < 576px</p>
 </div>
 
 <!-- Optional JavaScript -->
